--- a/reactpage/src/App.css
+++ b/reactpage/src/App.css
@@ -1,27 +1,128 @@
-body {
-    background-color: #FFDAB9;
-
-}
-.center-column {
-    position: center;
-    width: 300px;
-    margin: 20px auto;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 3px;
-    box-shadow: 6px 2px 30px 0px rgba(0, 0, 0, 0.75);
+body{
+    background-image: url("red-black-gradient.jpg");
+    background-position: top;
+    background-size: contain;
 }
 
-.item-row {
-    background-color: #BC8F8F;
-    margin: 10px;
-    padding: 20px;
-    border-radius: 3px;
-    color: #A52A2A;
-    font-style: oblique;
-    font-size: 20px;
-    font-weight: 900;
-    box-shadow: 0px -1px 10px -4px rgba(0, 0, 0, 0.75);
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: white;
+}
+li {
+  float: right;
+}
+li a {
+  display: block;
+  color: black;
+  padding: 0px 30px;
+  margin:13px 20px;
+  text-decoration: none;
+}
+h1{
+    color : white;
+    margin: 60px 50px;
+    font-family: "BebasNeue Bold";
+    font-size: 400%;
+}
+h4 {
+    color : white;
+    margin:-60px 50px;
+    font-family: "BebasNeue Book";
+    font-size: 150%;
+}
+h5 {
+    font-family: "BebasNeue Regular";
+    font-size: 110%;
+
 }
 
+.box {
+  background-color: white;
+  padding: 100px;
+}
+b{
+    font-family: "BebasNeue Bold";
+    font-size: 150%;
+}
+.box2 {
+    background-color: 	#202020;
+    padding: 0px;
+}
 
+.navbar {
+  overflow: hidden;
+  background-color:#202020;
+  bottom: 0;
+  width: 100%;
+}
+
+.navbar a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 10px ;
+  margin: 0px 67px;
+  text-decoration: none;
+  font-size: 15px;
+  font-family: "BebasNeue Thin";
+}
+
+.navbar a:hover {
+  background: #f1f1f1;
+  color: black;
+}
+ol.d {
+    background-color:#202020;
+    color:white;
+    list-style-type: none;
+    padding : 0px 50px;
+    margin: 33px 220px;
+    float: left;
+}
+
+a {
+    text-decoration: none;
+    font-family: "BebasNeue Book";
+    font-size: 110%;
+}
+p {
+    font-family: "BebasNeue Light";
+     font-weight: 900;
+}
+
+@font-face{
+    font-family: BebasNeue Bold;
+    src: url("../src/fonts/BebasNeue Bold.ttf");
+    font-style: normal;
+    font-weight: 100;
+
+}
+@font-face{
+    font-family: BebasNeue Regular;
+    src: url("../src/fonts/BebasNeue Regular.ttf");
+    font-style: normal;
+    font-weight: 100;
+}
+@font-face{
+    font-family: BebasNeue Light;
+    src: url("../src/fonts/BebasNeue Light.ttf");
+    font-style: normal;
+
+}
+@font-face{
+    font-family: BebasNeue Book;
+    src: url("../src/fonts/BebasNeue Book.ttf");
+    font-style: normal;
+    font-weight: 100;
+}
+
+@font-face{
+    font-family: BebasNeue Thin;
+    src: url("../src/fonts/BebasNeue Thin.ttf");
+    font-style: normal;
+    font-weight: 100;
+}
